--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
     .tagline { font-size:12px; color:var(--muted); }
     .logo-mark {
       width:52px; height:52px; border-radius:50%;
-      background: radial-gradient(circle at 30% 20%,#7fffd4,#2fa678 40%,#021514 70%);
       display:flex; align-items:center; justify-content:center;
       box-shadow:0 0 18px rgba(47,166,120,.6);
+      overflow:hidden;
     }
-    .logo-mark svg { width:34px; height:34px; }
     .card {
       background:var(--card);
       padding:14px;
@@ -177,13 +176,8 @@
   <div class="wrap">
     <header>
       <div class="logo-mark" title="TreeZ logo">
-        <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="24" cy="24" r="12" fill="none" stroke="#02110c" stroke-width="2"/>
-          <circle cx="24" cy="24" r="8" fill="none" stroke="#02110c" stroke-width="2" stroke-dasharray="4 3"/>
-          <path d="M10 34 L18 26" stroke="#02110c" stroke-width="3" stroke-linecap="round"/>
-          <path d="M38 14 L30 22" stroke="#02110c" stroke-width="3" stroke-linecap="round"/>
-        </svg>
-      </div>
+        <img src="icon-512.png" alt="TreeZ logo" style="width:52px;height:52px;border-radius:50%;display:block;" />
+</div>
       <div>
         <h1>TreeZ — Structural Assessment (Stem + Wind)</h1>
         <div class="tagline">
@@ -404,6 +398,17 @@
         </div>
 
         <div id="lossSummary" class="small"></div>
+        <div class="row" style="margin-top:10px;">
+          <div>
+            <label for="siteName">Site name</label>
+            <input id="siteName" type="text" placeholder="e.g., Dan Y Castell" autocomplete="off" />
+          </div>
+          <div>
+            <label for="treeId">Tree ID</label>
+            <input id="treeId" type="text" placeholder="e.g., T12" autocomplete="off" />
+          </div>
+        </div>
+
         <div style="margin-top:6px;display:flex;gap:8px;flex-wrap:wrap;">
           <button id="saveImage" class="primary">Save stem cross-section PNG</button>
         </div>
@@ -1455,6 +1460,34 @@
     drawTreePreview();
   }
 
+  function _pad2(n){ return String(n).padStart(2,'0'); }
+  function getTimestamp(){
+    const d = new Date();
+    return `${d.getFullYear()}-${_pad2(d.getMonth()+1)}-${_pad2(d.getDate())}_${_pad2(d.getHours())}-${_pad2(d.getMinutes())}-${_pad2(d.getSeconds())}`;
+  }
+  function slugify(s){
+    return (s||'')
+      .toString()
+      .trim()
+      .replace(/\s+/g,'-')
+      .replace(/[^a-zA-Z0-9_-]/g,'')
+      .replace(/-+/g,'-')
+      .replace(/^[-_]+|[-_]+$/g,'');
+  }
+  function getReportMeta(){
+    const site = slugify(document.getElementById('siteName')?.value);
+    const tree = slugify(document.getElementById('treeId')?.value);
+    return { site, tree };
+  }
+  function buildReportFilename(kind){
+    const {site, tree} = getReportMeta();
+    const parts = ['TreeZ', kind];
+    if (site) parts.push(site);
+    if (tree) parts.push(tree);
+    parts.push(getTimestamp());
+    return parts.join('_') + '.png';
+  }
+
   function saveScenarioImage(){
     if(!lastMetrics){
       alert('Adjust a value first so the tool can calculate a scenario.');
@@ -1511,7 +1544,7 @@
 
     const link = document.createElement('a');
     link.href = oc.toDataURL('image/png');
-    link.download = 'stemz_scenario.png';
+    link.download = buildReportFilename('Stem');
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
@@ -1629,7 +1662,7 @@
 
     const link = document.createElement('a');
     link.href = out.toDataURL('image/png');
-    link.download = 'stemz_windz_snapshot.png';
+    link.download = buildReportFilename('Full');
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
@@ -2164,6 +2197,7 @@ resetBtn.addEventListener('click', e=>{
   autoUpdateZe(true);
   drawTreePreview();
 </script>
+
 <script>
   // PWA: register service worker
   if ('serviceWorker' in navigator) {
