--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
 </div>
       <div>
         <h1>TreeZ — Structural Assessment (Stem + Wind)</h1>
+<div class="version">
+  TreeZ v1.1 · Jan 2026
+</div>
         <div class="tagline">
           Model stem/cavity geometry, then compare <strong>stem strength</strong> vs <strong>anchorage windfirmness</strong> under static wind loads using UK wind presets.
         </div>
